[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "SwiftSarsa"
version = "0.1.0"
description = "SwiftSarsa: Fast and Robust Linear Control"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Khurram Javed" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/khurramjaved96/swift-sarsa"

[tool.scikit-build]
# Where the pure-Python package lives (create these files below)
wheel.packages = ["src/swiftsarsa"]

[tool.scikit-build.cmake]
version = "3.21"
